--- a/TP2/src/styles.css
+++ b/TP2/src/styles.css
@@ -59,10 +59,12 @@
 
 * {
 	font-family: "Roboto", sans-serif;
-}
-
-body {
 	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-decoration: none;
+	border: none;
+	outline: none;
 }
 
 /* Box-sizing: you can use content-box or padding-box (where supported) at will, without worrying about a universal selector (*) overriding your CSS */
