--- a/TP2/src/app/components/footer/footer.component.html
+++ b/TP2/src/app/components/footer/footer.component.html
@@ -1,1 +1,13 @@
-<p>footer works!</p>
+<section class="footer">
+    <div class="left">
+        <p>Copyright - 2022</p>
+    </div>
+    <div class="center">
+        <app-logo routerLink="/"></app-logo>
+    </div>
+    <div class="right">
+        <app-icon name="facebook"></app-icon>
+        <app-icon name="twitter"></app-icon>
+        <app-icon name="instagram"></app-icon>
+    </div>
+</section>
