--- a/TP2/src/app/components/header/header.component.html
+++ b/TP2/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
 		<app-icon name="menu"></app-icon>
 	</div>
 	<div class="center">
-		<app-logo routerLink="/"></app-logo>
+		<app-logo class="link" routerLink="/"></app-logo>
 	</div>
 	<div class="right">
 		<app-icon name="search" routerLink="/busqueda"></app-icon>
