--- a/TP2/src/app/components/pages/home/home.component.html
+++ b/TP2/src/app/components/pages/home/home.component.html
@@ -1,1 +1,62 @@
-<p>home works!</p>
+<section class="home">
+	<h1 class="title">
+		Bienvenido a
+		<span> juegos games </span>
+	</h1>
+
+	<app-category-cards-group
+		name="Continuar jugando"
+		[games]="gamesService.getContinuePlaying()"
+	>
+		<app-icon name="continue-playing" [width]="29"></app-icon>
+	</app-category-cards-group>
+
+	<app-category-cards-group
+		*ngIf="sessionService.isLoggedIn()"
+		name="Mis favoritos"
+		[games]="gamesService.getFavorites()"
+	>
+		<app-icon name="favorites-empty" [width]="29"></app-icon>
+	</app-category-cards-group>
+
+	<app-category-cards-group
+		name="Recomendados para ti"
+		[games]="gamesService.getRecommendedForYou()"
+	></app-category-cards-group>
+
+	<app-category-cards-group
+		name="Accion"
+		[games]="gamesService.getByCategory('accion')"
+		[viewMore]="true"
+	></app-category-cards-group>
+
+	<app-category-cards-group
+		name="Belleza"
+		[games]="gamesService.getByCategory('belleza')"
+		[viewMore]="true"
+	></app-category-cards-group>
+
+	<app-category-cards-group
+		name="Carreras"
+		[games]="gamesService.getByCategory('carreras')"
+		[viewMore]="true"
+	></app-category-cards-group>
+
+	<app-category-cards-group
+		name="Gestion"
+		[games]="gamesService.getByCategory('gestion')"
+		[viewMore]="true"
+	></app-category-cards-group>
+
+	<app-category-cards-group
+		name="Infantiles"
+		[games]="gamesService.getByCategory('infantiles')"
+		[viewMore]="true"
+	></app-category-cards-group>
+
+	<app-category-cards-group
+		name="Puzzle"
+		[games]="gamesService.getByCategory('puzzle')"
+		[viewMore]="true"
+	></app-category-cards-group>
+</section>
