Refactor componentes folder and minimal improvements in responsive

--- a/TP2/src/app/components/atoms/card-game/card-game.component.css
+++ b/TP2/src/app/components/atoms/card-game/card-game.component.css
@@ -1,3 +1,17 @@
 .card-game {
 	cursor: pointer;
 }
+
+.name {
+	max-width: 250px;
+}
+
+img {
+	width: 250px;
+}
+
+@media (min-width: 1024px) {
+	img {
+		width: 300px;
+	}
+}
