--- a/TP2/src/app/components/atoms/card-game/card-game.component.html
+++ b/TP2/src/app/components/atoms/card-game/card-game.component.html
@@ -1,4 +1,4 @@
 <div class="card-game">
-	<img [src]="src" [width]="width" alt="game" />
-	<p class="body">{{ name }}</p>
+	<img [src]="src" alt="game" />
+	<p class="name body">{{ name }}</p>
 </div>
