--- a/TP2/src/app/components/molecules/category-cards-group/category-cards-group.component.css
+++ b/TP2/src/app/components/molecules/category-cards-group/category-cards-group.component.css
@@ -35,3 +35,9 @@
 app-card-game:last-child {
 	margin-right: var(--space-x-large);
 }
+
+@media (min-width: 1024px) {
+	.cards-group {
+		gap: var(--space-large);
+	}
+}
