--- a/TP2/src/app/components/pages/favorites/favorites.component.html
+++ b/TP2/src/app/components/pages/favorites/favorites.component.html
@@ -1,1 +1,5 @@
-<p>favorites works!</p>
+<section class="favorites">
+    <h1 class="title"> Mis favoritos</h1>
+    <app-favorites-cards-group [games]="gamesService.getFavorites()">
+    </app-favorites-cards-group>
+</section>
