--- a/TP2/src/app/components/molecules/header/header.component.css
+++ b/TP2/src/app/components/molecules/header/header.component.css
@@ -1,43 +1,69 @@
 .header {
-	background-color: var(--primary);
-	height: 90px;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: var(--space-x-small);
+    background-color: var(--primary);
+    height: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: var(--space-x-small);
 }
 
 .left,
 .right {
-	/*because position absolute of .center*/
-	z-index: 100;
+    /*because position absolute of .center*/
+    z-index: 100;
 }
+
 .right {
-	display: flex;
-	align-items: center;
-	gap: var(--space-x-small);
+    display: flex;
+    align-items: center;
+    gap: var(--space-x-small);
 }
 
 .center {
-	/* position absolute for logo horizontal alignment */
-	position: absolute;
-	left: 0;
-	right: 0;
-	text-align: center;
+    /* position absolute for logo horizontal alignment */
+    position: absolute;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
 
 .menu-overlay {
-	padding: var(--space-medium) var(--space-large);
+    padding: var(--space-medium) var(--space-large);
 }
-.menu-overlay > p:first-child {
-	padding-bottom: var(--space-x-small);
+
+.menu-overlay>p:first-child {
+    padding-bottom: var(--space-x-small);
 }
 
 .category {
-	margin-left: var(--space-large);
-	margin-bottom: var(--space-x-small);
+    margin-left: var(--space-large);
+    margin-bottom: var(--space-x-small);
 }
 
 li.category:first-child {
-	margin-top: var(--space-x-small);
+    margin-top: var(--space-x-small);
+}
+
+.search-bar {
+    visibility: hidden;
+}
+
+@media(min-width: 1024px) {
+    .menu-overlay p:hover,
+    li:hover {
+        color: var(--secondary);
+    }
+    .search-bar {
+        visibility: visible;
+        height: 40px;
+        width: 300px;
+        border-radius: 16px;
+        padding-left: 4%;
+        border: none;
+        background-color: var(--primary-light-2);
+        box-shadow: var(--elevation-1dp);
+    }
+    .search-bar:focus {
+        background-color: var(--white);
+    }
 }
