Refactor button, added input component and improve register component

--- a/TP2/src/app/components/atoms/button/button.component.css
+++ b/TP2/src/app/components/atoms/button/button.component.css
@@ -29,3 +29,11 @@
 .btn-large:hover {
 	background-color: var(--secondary-dark-2);
 }
+
+.w-100 {
+	width: 100%;
+}
+
+.text-black {
+	color: var(--black);
+}
