--- a/TP2/src/app/components/pages/register/register.component.html
+++ b/TP2/src/app/components/pages/register/register.component.html
@@ -1,1 +1,38 @@
-<p>register works!</p>
+<section class="register-container">
+	<section class="register">
+		<div class="center">
+			<h1>Crear cuenta</h1>
+			<p class="body-small">Podrás añadir juegos a favoritos!</p>
+		</div>
+		<form (submit)="register($event)">
+			<app-input
+				[(value)]="user.username"
+				label="Nombre de usuario"
+			></app-input>
+
+			<app-input
+				[(value)]="user.email"
+				label="Correo electronico"
+			></app-input>
+
+			<app-input
+				[(value)]="user.password"
+				label="Contraseña"
+				type="password"
+			></app-input>
+
+			<app-input
+				[(value)]="confirmPassword"
+				label="Confirmar contraseña"
+				type="password"
+			></app-input>
+
+			<app-button
+				text="Registrarse"
+				classList="w-100 text-black h4"
+			></app-button>
+		</form>
+		<p class="link" routerLink="/iniciar-sesion">¿Ya tienes una cuenta?</p>
+		<p class="link" routerLink="/">Volver a inicio</p>
+	</section>
+</section>
