Added spinner component and added to register page

--- a/TP2/src/app/components/pages/register/register.component.html
+++ b/TP2/src/app/components/pages/register/register.component.html
@@ -32,6 +32,7 @@
 				classList="w-100 text-black h4"
 			></app-button>
 		</form>
+		<app-spinner [loading]="spinnerLoading"></app-spinner>
 		<p class="link" routerLink="/iniciar-sesion">¿Ya tienes una cuenta?</p>
 		<p class="link" routerLink="/">Volver a inicio</p>
 	</section>
