--- a/TP2/src/app/components/atoms/button/button.component.html
+++ b/TP2/src/app/components/atoms/button/button.component.html
@@ -3,7 +3,7 @@
 	[ngClass]="{
 		'btn-small body-small': size == 'small',
 		'btn-normal body': size == 'normal',
-		'btn-large body': size == 'large'
+		'btn-large h4': size == 'large'
 	}"
 >
 	{{ text }}
