--- a/TP2/src/app/components/atoms/card-game/card-game.component.css
+++ b/TP2/src/app/components/atoms/card-game/card-game.component.css
@@ -6,12 +6,17 @@
 	max-width: 250px;
 }
 
-img {
+.width-250 {
 	width: 250px;
 }
 
+.width-328 {
+	width: 328px;
+	border-radius: 10px;
+}
+
 @media (min-width: 1024px) {
-	img {
+	.width-250 {
 		width: 300px;
 	}
 }
