Improve login page

--- a/TP2/src/app/components/pages/login/login.component.html
+++ b/TP2/src/app/components/pages/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<section class="login-container">
+    <section class="login">
+        <div class="center">
+            <h1>Iniciar Sesión</h1>
+        </div>
+        <form (submit)="login($event)">
+            <app-input [(value)]="user.email" label="Correo electronico"></app-input>
+            <app-input [(value)]="user.password" label="Contraseña" type="password"></app-input>
+            <app-button text="Ingresar" classList="w-100 text-black h4"></app-button>
+        </form>
+        <app-spinner [loading]="spinnerLoading"></app-spinner>
+        <p class="link" routerLink="/registrarse">¿Aun no tienes una cuenta?</p>
+        <p class="link" routerLink="/">Volver a inicio</p>
+    </section>
+</section>
