--- a/TP2/src/app/components/pages/playing/playing.component.html
+++ b/TP2/src/app/components/pages/playing/playing.component.html
@@ -1,1 +1,7 @@
-<p>playing works!</p>
+<section class="playing">
+    <img src="/assets/images/jugando.jpg" alt="playing">
+    <div class="icons-container">
+        <app-icon class="question" name="question" [width]="30"></app-icon>
+        <app-icon class="back" name="back" [width]="30"></app-icon>
+    </div>
+</section>
