Fixed header profile overlay to right

--- a/TP2/src/app/components/atoms/overlay/overlay.component.html
+++ b/TP2/src/app/components/atoms/overlay/overlay.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="visible" class="overlay">
+<section *ngIf="visible" class="overlay" [class.overlay-right]="right == true">
 	<span (click)="toggleVisible()" class="close">&times;</span>
 	<ng-content></ng-content>
 </section>
