--- a/TP2/src/app/components/pages/register/register.component.html
+++ b/TP2/src/app/components/pages/register/register.component.html
@@ -29,7 +29,7 @@
 
 			<app-button
 				text="Registrarse"
-				classList="w-100 text-black h4"
+				classList="w-100 text-black h4 btn-submit"
 			></app-button>
 		</form>
 		<app-spinner [loading]="spinnerLoading"></app-spinner>
