--- a/TP2/src/app/components/atoms/button/button.component.css
+++ b/TP2/src/app/components/atoms/button/button.component.css
@@ -41,3 +41,35 @@
 .background-success {
 	background-color: var(--success);
 }
+
+/* inicio bloque btn-submit loading */
+.btn-submit {
+	position: relative;
+	overflow: hidden;
+	z-index: 1;
+}
+.btn-submit:after {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -2;
+}
+.btn-submit:before {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 0%;
+	height: 100%;
+	background-color: var(--secondary-dark-2);
+	transition: all 2s;
+	z-index: -1;
+}
+
+.btn-submit:focus::before {
+	width: 100%;
+}
+/* fin bloque btn-submit loading */
