--- a/TP2/src/app/components/atoms/button/button.component.css
+++ b/TP2/src/app/components/atoms/button/button.component.css
@@ -1,75 +1,82 @@
 .btn {
-	border-radius: 10px;
-	color: var(--white);
-	cursor: pointer;
+    border-radius: 10px;
+    color: var(--white);
+    cursor: pointer;
+    box-shadow: var(--elevation-2dp);
 }
 
 .btn-small {
-	padding: var(--space-xx-small) var(--space-x-small);
-	background-color: var(--black);
-	border: 1px solid var(--white);
+    padding: var(--space-xx-small) var(--space-x-small);
+    background-color: var(--black);
+    border: 1px solid var(--white);
 }
 
 .btn-small:hover {
-	background-color: var(--white);
-	color: var(--black);
+    background-color: var(--white);
+    color: var(--black);
 }
 
 .btn-normal {
-	padding: var(--space-medium);
-	background-color: var(--secondary);
+    padding: var(--space-medium);
+    background-color: var(--secondary);
 }
 
 .btn-large {
-	padding: var(--space-large) var(--space-xx-large);
-	background-color: var(--secondary);
+    padding: var(--space-large) var(--space-xx-large);
+    background-color: var(--secondary);
 }
 
 .btn-normal:hover,
 .btn-large:hover {
-	background-color: var(--secondary-dark-2);
+    background-color: var(--secondary-dark-2);
 }
 
 .w-100 {
-	width: 100%;
+    width: 100%;
 }
 
 .text-black {
-	color: var(--black);
+    color: var(--black);
 }
 
 .background-success {
-	background-color: var(--success);
+    background-color: var(--success);
 }
 
+
 /* inicio bloque btn-submit loading */
+
 .btn-submit {
-	position: relative;
-	overflow: hidden;
-	z-index: 1;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
 }
+
 .btn-submit:after {
-	content: "";
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: -2;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
 }
+
 .btn-submit:before {
-	content: "";
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 0%;
-	height: 100%;
-	background-color: var(--secondary-dark-2);
-	transition: all 2s;
-	z-index: -1;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: var(--secondary-dark-2);
+    transition: all 2s;
+    z-index: -1;
 }
 
 .btn-submit:focus::before {
-	width: 100%;
+    width: 100%;
 }
+
+
 /* fin bloque btn-submit loading */
