--- a/TP2/src/app/components/molecules/category-cards-group/category-cards-group.component.css
+++ b/TP2/src/app/components/molecules/category-cards-group/category-cards-group.component.css
@@ -1,63 +1,68 @@
 .category {
-	margin-bottom: var(--space-x-large);
+    margin-bottom: var(--space-x-large);
 }
 
 .container-cards-group {
-	display: flex;
-	align-items: center;
-	position: relative;
+    display: flex;
+    align-items: center;
+    position: relative;
 }
 
 .cards-group {
-	display: flex;
-	overflow-x: scroll;
-	gap: var(--space-medium);
-	/* Hide scrollbar for IE, Edge and Firefox */
-	-ms-overflow-style: none; /* IE and Edge */
-	scrollbar-width: none; /* Firefox */
+    display: flex;
+    overflow-x: scroll;
+    gap: var(--space-medium);
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
+
 /* Hide scrollbar for Chrome, Safari and Opera */
+
 .cards-group::-webkit-scrollbar {
-	display: none;
+    display: none;
 }
 
 .arrow-scroll {
-	display: none;
+    display: none;
 }
 
 .name {
-	display: flex;
-	gap: var(--space-medium);
-	align-items: center;
-	margin-bottom: var(--space-xx-small);
+    display: flex;
+    gap: var(--space-medium);
+    align-items: center;
+    margin-bottom: var(--space-xx-small);
 }
 
 app-card-game:last-child {
-	margin-right: var(--space-x-large);
+    margin-right: var(--space-x-large);
 }
 
 @media (min-width: 1024px) {
-	.cards-group {
-		gap: var(--space-large);
-		margin-left: calc(var(--space-x-large) + 36px + var(--space-x-large));
-		margin-right: calc(var(--space-x-large) + 36px + var(--space-x-large));
-	}
-
-	.arrow-scroll {
-		display: block;
-		position: absolute;
-	}
-
-	.arrow-scroll-left {
-		left: var(--space-x-large);
-	}
-
-	.arrow-scroll-right {
-		right: var(--space-x-large);
-	}
-
-	.name {
-		padding-left: var(--space-medium);
-	}
+    .cards-group {
+        gap: var(--space-large);
+        margin-left: calc(var(--space-x-large) + 36px + var(--space-x-large));
+        margin-right: calc(var(--space-x-large) + 36px + var(--space-x-large));
+    }
+    .arrow-scroll {
+        display: block;
+        position: absolute;
+        opacity: 0.8;
+    }
+    .arrow-scroll:hover {
+        opacity: 1;
+    }
+    .arrow-scroll-left {
+        left: var(--space-x-large);
+    }
+    .arrow-scroll-right {
+        right: var(--space-x-large);
+    }
+    .name {
+        padding-left: var(--space-medium);
+        margin-left: var(--space-x-large);
+    }
 }
