Improved spinner overlay comunicate with router and remove old spinner component

--- a/TP2/src/app/app.component.html
+++ b/TP2/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+	<app-spinner-overlay></app-spinner-overlay>
 	<app-header></app-header>
 	<div class="scrollable">
 		<section class="router-content">
