--- a/TP2/src/app/components/atoms/spinner-overlay/spinner-overlay.component.css
+++ b/TP2/src/app/components/atoms/spinner-overlay/spinner-overlay.component.css
@@ -1,35 +1,34 @@
 .container {
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--black);
-    opacity: 0.9;
-    justify-content: center;
-    margin-top: 25%;
-    padding-top: 70%;
-    z-index: 0;
+	display: flex;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--black);
+	opacity: 0.9;
+	justify-content: center;
+	align-items: center;
+	z-index: 500;
 }
 
 .hidden {
-    display: none;
+	display: none;
 }
 
 .loading-animation {
-    transition-property: transform;
-    animation-name: rotate;
-    animation-duration: 1.2s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+	transition-property: transform;
+	animation-name: rotate;
+	animation-duration: 1.2s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
 }
 
 @keyframes rotate {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
