--- a/TP2/src/app/components/molecules/header/header.component.html
+++ b/TP2/src/app/components/molecules/header/header.component.html
@@ -10,6 +10,8 @@
 				class="menu-category"
 				text="Categorias"
 				[options]="getCategories()"
+				[link]="true"
+				linkPrefix="categorias/"
 				classList="h4"
 			></app-dropdown>
 		</div>
