Improved search component with search functionality

--- a/TP2/src/app/components/molecules/category-cards-group/category-cards-group.component.html
+++ b/TP2/src/app/components/molecules/category-cards-group/category-cards-group.component.html
@@ -1,4 +1,4 @@
-<section class="category">
+<section *ngIf="games.length > 0" class="category">
 	<div class="name">
 		<h3 class="name">{{ name }}</h3>
 		<ng-content></ng-content>
