Fixed github action and improved base url for github pages

--- a/TP2/src/app/components/atoms/avatar/avatar.component.html
+++ b/TP2/src/app/components/atoms/avatar/avatar.component.html
@@ -1,1 +1,1 @@
-<img src="/assets/images/avatar.jpg" [width]="size" alt="avatar" />
+<img src="assets/images/avatar.jpg" [width]="size" alt="avatar" />
