--- a/TP2/src/app/components/pages/category/category.component.html
+++ b/TP2/src/app/components/pages/category/category.component.html
@@ -1,1 +1,13 @@
-<p>category works!</p>
+<section class="category">
+	<h1>{{ category | titlecase }}</h1>
+
+	<div class="games">
+		<app-card-game
+			*ngFor="let game of games"
+			routerLink="/juego/{{ game.id }}"
+			src="{{ game.image }}"
+			name="{{ game.name }}"
+			[width]="328"
+		></app-card-game>
+	</div>
+</section>
