--- a/TP2/src/app/components/pages/for-playing/for-playing.component.css
+++ b/TP2/src/app/components/pages/for-playing/for-playing.component.css
@@ -1,64 +1,74 @@
 .for-playing {
-	padding: var(--space-medium);
-	margin-bottom: var(--space-x-large);
+    padding: var(--space-medium);
+    margin-bottom: var(--space-x-large);
 }
 
 .top {
-	display: flex;
-	justify-content: space-between;
-	margin-bottom: var(--space-xx-small);
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: var(--space-xx-small);
 }
 
 .link {
-	color: var(--link-light);
+    color: var(--link-light);
 }
 
 .right {
-	display: flex;
-	gap: var(--space-medium);
+    display: flex;
+    gap: var(--space-medium);
 }
 
 .image-container {
-	margin-top: var(--space-medium);
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+    margin-top: var(--space-medium);
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .btn-play {
-	position: absolute;
-	bottom: 20%;
+    position: absolute;
+    bottom: 20%;
 }
 
 .tabs-container {
-	margin-top: var(--space-large);
+    margin-top: var(--space-large);
 }
 
 .instructions {
-	list-style: inside;
+    list-style: inside;
 }
 
 .multimedia {
-	margin-bottom: var(--space-large);
+    margin-bottom: var(--space-large);
 }
 
-.multimedia > p {
-	margin-bottom: var(--space-xx-small);
+.multimedia>p {
+    margin-bottom: var(--space-xx-small);
 }
 
 .video {
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .video-play {
-	position: absolute;
+    position: absolute;
 }
 
 .multimedia-flex {
-	display: flex;
-	gap: var(--space-x-small);
+    display: flex;
+    gap: var(--space-x-small);
+    position: relative;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+}
+
+.multimedia-flex img {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    scroll-snap-align: center;
 }
