--- a/TP2/src/app/components/pages/playing/playing.component.css
+++ b/TP2/src/app/components/pages/playing/playing.component.css
@@ -23,6 +23,36 @@ img {
     top: 50px;
 }
 
+.help-overlay {
+    position: absolute;
+    transform: rotate(90deg);
+    top: 20%;
+    left: 35%;
+    width: 250px;
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: var(--primary-light-2);
+    color: var(--primary-dark-1);
+    padding-left: var(--space-large);
+    z-index: 600;
+    border-radius: 20px 20px 20px 20px;
+    box-shadow: var(--elevation-16dp);
+}
+
+.help-overlay-container .title {
+    margin-bottom: var(--space-small);
+}
+
+.close {
+    font-size: 2.5rem;
+    position: absolute;
+    right: 16px;
+    top: 0;
+    cursor: pointer;
+}
+
 @media(min-width: 1024px) {
     .playing {
         position: relative;
